# dictionaryapi

./: .env  .gitignore  Cargo.toml  Shuttle.toml  output.ndjson
.github/workflows/: deploy.yml
src/: main.rs
src/middleware/: cors.rs  helmet.rs  mod.rs  rate_limit.rs  timeout.rs
src/models/: error.rs  mod.rs  word.rs
src/routes/: dictionary.rs
src/utils/: bigquery.rs
src/validate/: format_validators.rs  func_validation.rs  mod.rs  validator.rs
