[package]
name = "dictionaryapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7" #
gcp-bigquery-client = "0.26"  # or latest
dotenv="0.15"
base64="0.21"
